--- a/public/formLogin.html
+++ b/public/formLogin.html
@@ -151,13 +151,13 @@
                   id="recordar"
                 />
                 <label class="form-check-label" for="recordar">Recuérdame</label>
-              </div>
+              </div>              
               <button type="submit" class="btn btn-primary w-100">
                 Iniciar sesión
-              </button>
+              </button>            
             </form>
             <div class="mt-3 text-center">
-              <a href="#">¿Olvidaste tu contraseña?</a>
+              <a href="./perfilUsuario.html">¿Olvidaste tu contraseña?</a>
             </div>
           </div>
         </div>
